# Emerald

./: CMakeLists.txt  CMakePresets.json  configure.py
.github/ISSUE_TEMPLATE/: story.md
cmake/: setup.cmake
demo/: CMakeLists.txt  em_hardware_triangle_demo.cpp  em_software_triangle_demo.cpp  em_window_demo.cpp
lib/: CMakeLists.txt
src/: context.hpp  draw.cpp  draw.hpp  software_renderer.hpp  window.hpp
src/api/: context.hpp  draw.hpp  software_renderer.hpp  window.hpp
src/common/: draw.hpp
src/eld/: context.hpp  draw.cpp  draw.hpp  software_renderer.cpp  software_renderer.hpp  window.hpp
src/eld/api/: draw.hpp  window.hpp
src/eld/common/: draw.hpp
src/eld/win/: context.cpp  context.hpp  software_renderer.cpp  software_renderer.hpp  window.cpp  window.hpp
src/win/: context.cpp  context.hpp  software_renderer.cpp  software_renderer.hpp  window.cpp  window.hpp
